--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@types/mime": "^2.0.0",
 		"@types/node": "^10.7.1",
 		"@types/uuid": "^3.4.3",
+		"@types/ws": "^6.0.1",
 		"chokidar": "^2.0.4",
 		"dayjs": "^1.7.7",
 		"dtk": "^1.0.3",
@@ -17,6 +18,7 @@
 		"ujsx": "^1.2.0",
 		"uuid": "^3.3.2",
 		"webpack": "^4.17.1",
-		"webpack-cli": "^3.1.0"
+		"webpack-cli": "^3.1.0",
+		"ws": "^6.1.0"
 	}
 }
